http://jira.sakaiproject.org/jira/browse/EVALSYS-666 Cleanup of producers to ensure no user perms checks are being done without using services EXCEPT for the assign producers and the hierarchy producers Also adjusted the required items code to be more efficient and resilient
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/trunk@59080 fdecad78-55fc-0310-b1b2-d7d25cf747c9